<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/menuMyCart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/mycart"/>
    <item
        android:id="@+id/menuAccount"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/myprofile" />
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notification"/>
    <item
        android:id="@+id/menuLogOut"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"/>
</menu>